# KLIG_V1

./: FINDINGS_WK3.md
infocube-main/: README.md  compare.py  evaluation.ipynb  evaluation_adaptive_cap_at1.ipynb  evaluation_adaptive_capped (1).ipynb  evaluation_adaptive_capped.ipynb  evaluation_cap_demo.ipynb  evaluation_multi_method_clean.ipynb  evaluation_sigma_comprehensive.ipynb  evaluation_sigma_overview.ipynb  evaluation_tau_sweep.ipynb  evaluationv2.ipynb  evaluationv3.ipynb  playground.ipynb  pyproject.toml
infocube-main/klig/: __init__.py
infocube-main/klig/compare/: captum_baselines.py
infocube-main/klig/core/: integrator.py  path.py
infocube-main/klig/image/: attribution.py  stopping.py  viz.py
