[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klig"
version = "0.1.0"
description = "KL-path Integrated Gradients for feature attribution"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "captum>=0.7",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["klig*"]
